tests/snapshots/render__active_search_bar.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 100, 14)"
---
┌Assigned to me · In Progress · Inbox┐┌DAN2-7──────────────────────────────────────────────────────┐
│!!! DAN2-7 In Progress Wood-fired ov││DAN2-7  In Progress  Urgent                                 │
│!!! DAN-10 In Progress Sprinkle disp││Wood-fired oven runs 40°C too hot on Friday nights          │
│!!  DAN2-2 In Progress Delivery driv││@dan  oven                                                  │
└ 1 of 7 ────────────────────────────┘│https://linear.app/dans-donuts/issue/DAN2-7                 │
┌Recently viewed─────────────────────┐│                                                            │
│Issues you open land here           ││Press enter to load the description and comments            │
└────────────────────────────────────┘│                                                            │
┌Saved Views─────────────────────────┐│                                                            │
└────────────────────────────────────┘│                                                            │
┌Teams───────────────────────────────┐│                                                            │
│                                    ││                                                            │
└────────────────────────────────────┘└────────────────────────────────────────────────────────────┘
 Search  'in p'  1 of 3   n next   N prev   esc exit
