tests/snapshots/render__assign_picker_overlay.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 100, 20)"
---
┌Assigned to me · In Progress · Inbox┐┌DAN2-7──────────────────────────────────────────────────────┐
│!!! DAN2-7 In Progress Wood-fired ov││DAN2-7  In Progress                                         ↑
│!!! DAN-10 In Progress Sprinkle disp││Wood-fired oven runs 40°C too hot on Friday nights          █
│!!  DAN2-2 In Progress Delivery driv││@dan  oven                                                  █
│!!! DAN2-3 Todo Add gluten-┌Assign  DAN2-7────────────────────────────┐sue/DAN2-7/wood-fired-oven-█
│!!  DAN-13 Todo Introduce a│Unassigned                                │                           █
│!!  DAN2-5 Backlog Settle t│dan  you                                  │                           █
│    DAN-15 Backlog Coffee p│sam                                       │                           ║
└ 1 of 7 ───────────────────│alex                                      │                           ║
┌Recently viewed────────────│                                          │oven creeps past 480°C and ║
│Issues you open land here  │                                          │lts.                       ║
└───────────────────────────│                                          │                           ║
┌Saved Views────────────────│                                          │                           ║
│No saved views             │                                          │                           ║
└───────────────────────────└ 1 of 4 ──────────────────────────────────┘king open                  ║
┌Teams───────────────────────────────┐│                                                            ║
│Dan's Pizza                         ││Checklist                                                   ║
│Dan's Donuts                        ││                                                            ↓
└ 1 of 2 ────────────────────────────┘└────────────────────────────────────────────────────────────┘
 j move   enter select   esc cancel                                             Dan's Donuts · @dan
