tests/snapshots/render__assigned_to_me_view.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 110, 16)"
---
┌Assigned to me · In Progress · Inbox────┐┌DAN2-7────────────────────────────────────────────────────────────┐
│!!! DAN2-7 In Progress Wood-fired oven r││DAN2-7  In Progress  Urgent                                       │
│!!! DAN-10 In Progress Sprinkle dispense││Wood-fired oven runs 40°C too hot on Friday nights                │
│!!  DAN2-2 In Progress Delivery driver G││@dan  oven                                                        │
│!!! DAN2-3 Todo Add gluten-free base opt││https://linear.app/dans-donuts/issue/DAN2-7                       │
└ 1 of 7 ────────────────────────────────┘│                                                                  │
┌Recently viewed─────────────────────────┐│Press enter to load the description and comments                  │
│Issues you open land here               ││                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌Saved Views─────────────────────────────┐│                                                                  │
│⠋  Loading…                             ││                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌Teams───────────────────────────────────┐│                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 j move   ] view   tab panel   1-9 jump   enter open   o browser   y yank   / find   z z… Dan's Donuts · @dan
