tests/snapshots/render__comment_editor_overlay.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 90, 22)"
---
┌Assigned to me 1/3──────────────┐┌DAN2-7────────────────────────────────────────────────┐
│!!! DAN2-7 In Progress Wood-fire││DAN2-7  In Progress                                   ↑
│!!! DAN-10 In Progress Sprinkle ││Wood-fired oven runs 40°C too hot on Friday nights    █
│!!  DAN2-2 In Progress Delivery ││@dan  oven                                            █
│!!! DAN2-3 Todo Add gluten-free ││https://linear.app/dans-donuts/issue/DAN2-7/wood-fired█
│!!  DAN-13 Todo Introduce a mapl││-oven-runs-too-hot                                    █
│!!  DAN2-5 Ba┌Comment──────────────────────────────────────────────────────┐            █
│    DAN-15 Ba│ Checked the damper.                                         │            █
│             │ Spring tension looks off, ordering a replacement.           │            █
│             │                                                             │ps past     ║
└ 1 of 7 ─────│                                                             │elts.       ║
┌Recently view│                                                             │            ║
│Issues you op│                                                             │            ║
└─────────────│                                                             │            ║
┌Saved Views──│                                                             │            ║
│No saved view│                                                             │            ║
└─────────────└─────────────────────────────────────────────────────────────┘            ║
┌Teams───────────────────────────┐│                                                      ║
│Dan's Pizza                     ││[x] Swap the thermocouple                             ║
│Dan's Donuts                    ││[ ] Inspect the flue damper                           ↓
└ 1 of 2 ────────────────────────┘└──────────────────────────────────────────────────────┘
 C-s post   enter newline   ↑/↓/←/→ move   esc cancel                 Dan's Donuts · @dan
