tests/snapshots/render__confirm_dialog.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 100, 20)"
---
┌Assigned to me · In Progress · Inbox┐┌DAN2-7──────────────────────────────────────────────────────┐
│!!! DAN2-7 In Progress Wood-fired ov││DAN2-7  In Progress                                         ↑
│!!! DAN-10 In Progress Sprinkle disp││Wood-fired oven runs 40°C too hot on Friday nights          █
│!!  DAN2-2 In Progress Delivery driv││@dan  oven                                                  █
│!!! DAN2-3 Todo Add gluten-free base││https://linear.app/dans-donuts/issue/DAN2-7/wood-fired-oven-█
│!!  DAN-13 Todo Introduce a maple-ba││runs-too-hot                                                █
│!!  DAN2-5 Backlog Settle the pineap││                                                            █
│    DAN-15 Backlog Coffe┌Confirm─────────────────────────────────────────┐                        ║
│                        │Set DAN2-7 to "Todo"?                           │                        ║
└ 1 of 7 ────────────────│                                                │n creeps past 480°C and ║
┌Recently viewed─────────│[y] yes    [n] no                               │.                       ║
│Issues you open land her│                                                │                        ║
└────────────────────────└────────────────────────────────────────────────┘                        ║
┌Saved Views─────────────────────────┐│• Actual: 470-480°C                                         ║
│⠋  Loading…                         ││• Suspect the flue damper is sticking open                  ║
└────────────────────────────────────┘│                                                            ║
┌Teams───────────────────────────────┐│Checklist                                                   ║
│                                    ││                                                            ↓
└────────────────────────────────────┘└────────────────────────────────────────────────────────────┘
 enter confirm   esc cancel                                                     Dan's Donuts · @dan
