tests/snapshots/render__go_prefix_overlay.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 84, 16)"
---
┌Assigned to me 1/3────────────┐┌Preview───────────────────────────────────────────┐
│⠋  Loading…                   ││No issue selected                                 │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
└────────────────────────────┌Go to───────────────────┐                            │
┌Recently viewed─────────────│g  top                  │                            │
│Issues you open land here   │G  bottom               │                            │
└────────────────────────────│i  issue                │                            │
┌Saved Views─────────────────│s  search               │                            │
│⠋  Loading…                 └────────────────────────┘                            │
└──────────────────────────────┘│                                                  │
┌Teams─────────────────────────┐│                                                  │
│                              ││                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────┘
 g top   G bottom   i issue   s search   esc cancel                     connecting…
