tests/snapshots/render__help_overlay.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 84, 24)"
---
┌Assigned to me 1/3────────────┐┌Preview───────────────────────────────────────────┐
│⠋  Loading…                   ││No issue selected                                 │
│                              ││                                                  │
│                              ││                                                  │
│                       ┌Keybindings───────────────────────┐                       │
│                       │Local                             │                       │
│                       │      j/↓  move                   │                       │
│                       │        ]  view                   │                       │
│                       │enter/l/→  open                   │                       │
│                       │        /  find                   │                       │
│                       │        n  next match             │                       │
│                       │        o  browser                │                       │
│                       │        y  yank                   │                       │
└───────────────────────│        r  reload                 │                       │
┌Recently viewed────────│Global                            │                       │
│Issues you open land he│        g  go to                  │                       │
└───────────────────────│      tab  panel                  │                       │
┌Saved Views────────────│shift+tab  panel                  │                       │
│⠋  Loading…            │        ?  help                   │                       │
└───────────────────────└──────────────────────────────────┘                       │
┌Teams─────────────────────────┐│                                                  │
│                              ││                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────┘
 j move   tab section   enter run   esc close                           connecting…
