tests/snapshots/render__inbox_view.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 110, 12)"
---
┌Assigned to me · In Progress · Inbox────┐┌Notification──────────────────────────────────────────────────────┐
│● New comment on DAN2-7 (wood-fired oven││New comment on DAN2-7 (wood-fired oven)                           │
│● You were assigned DAN-10 (sprinkle dis││unread                                                            │
│  DAN2-5 moved to Backlog (pineapple deb││                                                                  │
└ 1 of 3 ────────────────────────────────┘│Press enter to open the linked issue                              │
┌Recently viewed─────────────────────────┐│                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌Saved Views─────────────────────────────┐│                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌Teams───────────────────────────────────┐│                                                                  │
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 j move   ] view   tab panel   1-9 jump   enter open   o browser   y yank   / find   z z… Dan's Donuts · @dan
